update product detail

--- a/src/components/ProductSlick/productSlick.scss
+++ b/src/components/ProductSlick/productSlick.scss
@@ -16,6 +16,7 @@
             height: 360px;
             margin-bottom: 26px;
             cursor: grabbing;
+            padding: 0 5px;
         }
 
         &-content {
