--- a/src/components/AsNavFor/AsNavFor.scss
+++ b/src/components/AsNavFor/AsNavFor.scss
@@ -6,7 +6,13 @@
     &__first-slider {
         width: 100%;
         height: 600px;
-        object-fit: cover;
+
+        // & img {
+        //     width: 100%;
+        //     height: 100%;
+        //     object-fit: cover;
+
+        // }
     }
 
     &__second-slider {
