--- a/src/components/layout/layout.scss
+++ b/src/components/layout/layout.scss
@@ -2,17 +2,19 @@
 
 .header {
     width: 100%;
-    /* Line Color */
-    border-bottom: 2px solid #F3F3F3;
-    margin-bottom: 100px;
+    border-bottom: 2px solid #f3f3f3;
+    z-index: 3;
+    background-color: $background-color;
+    position: fixed;
+    top: 0;
+    left: 0;
 }
 
 .navbar {
-    height: 6.667rem; //120
+    height: 4.444rem; //80
     display: flex;
     justify-content: space-between;
     align-items: center;
-
 
     &__logo {
         display: flex;
@@ -53,15 +55,16 @@
             cursor: pointer;
         }
     }
-
 }
 
 .close-menu {
     display: none;
 }
 
-@media only screen and (min-width:46.25rem) and (max-width: 63.938rem) {
+@media only screen and (min-width: 46.25rem) and (max-width: 63.938rem) {
     .navbar {
+        gap: 50px;
+
         &__logo {
             & img {
                 width: 1.667rem; //30
@@ -69,12 +72,14 @@
 
             & h3 {
                 font-size: 1rem; //18
-
             }
         }
 
         &__menu {
-            font-size: 0.889rem;
+            font-size: 1.111rem;
+            justify-content: space-between;
+            width: 100%;
+            gap: 0;
         }
 
         &__futures {
@@ -87,13 +92,11 @@
 
 @media only screen and (max-width: 46.188rem) {
     .header {
-
         margin-bottom: 50px;
     }
 
     .navbar {
         height: 3.889rem; //70
-
 
         &__logo {
             display: flex;
@@ -129,9 +132,7 @@
         &__menu .navbar__futures {
             display: flex;
             margin-top: auto;
-
         }
-
 
         &__menu-mobile {
             display: inline-block;
@@ -141,12 +142,10 @@
         &__futures {
             display: none;
         }
-
     }
 
     .show-menu {
         transform: translateY(0%) !important;
-
     }
 
     .close-menu {
@@ -156,16 +155,14 @@
     }
 }
 
-
 .footer {
     padding: 80px 0;
     margin-top: 100px;
-    border-top: 2px solid #F3F3F3;
+    border-top: 2px solid #f3f3f3;
 
     &__container {
         display: flex;
         justify-content: space-between;
-
     }
 
     &__right {
@@ -193,34 +190,51 @@
     }
 }
 
-@media only screen and (min-width:46.25rem) and (max-width: 63.938rem) {
+@media only screen and (min-width: 46.25rem) and (max-width: 63.938rem) {
     .footer {
-        &__container {
-            gap: 50px;
-        }
-
-        &__right {
-
-            gap: 0 30px;
-
-        }
-
-    }
-}
-
-@media only screen and (max-width: 46.188rem) {
-    .footer {
-
-
         &__container {
             flex-direction: column;
             gap: 30px;
         }
 
         &__right {
-
             gap: 0 10px;
+            justify-content: space-around;
+        }
 
+        &__left {
+            text-align: center;
+
+            & p {
+                color: $paragraph-color;
+                font-size: 16px;
+                margin-top: 10px;
+            }
+        }
+
+        &__label {
+            font-size: 16px;
+        }
+
+        & li {
+            font-size: 16px;
+        }
+    }
+
+    .footer__left .navbar__logo {
+        justify-content: center;
+    }
+}
+
+@media only screen and (max-width: 46.188rem) {
+    .footer {
+        &__container {
+            flex-direction: column;
+            gap: 30px;
+        }
+
+        &__right {
+            gap: 0 10px;
         }
 
         &__left {
@@ -235,7 +249,6 @@
         }
 
         & li {
-
             font-size: 14px;
         }
     }
